comit to master

--- a/public/index.html
+++ b/public/index.html
@@ -253,7 +253,7 @@
             </div>
 
         <div class="w-full border-gray-200 border-t-2 border-dotted flex flex-row flex-wrap justify-around items-center h-24">
-            <p class="text-2xl">LOGO</p>
+            <p class="text-2xl"><img src="./icons/" alt=""></p>
             <div class="flex flex-row flex-wrap justify-around items-center w-52 text-lg">
                 <p><a href="https://openweathermap.org/api">API</a></p>
                 <p><a href="">За Реклама</a></p>
