--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <!-- navbar -->
         <nav class="bg-blue-500 text-white flex flex-wrap justify-center items-center">
             <div class="flex justify-center items-center">
-                <img src="../icons/logo.png" alt="" class="w-24"> 
+                <img src="../icons/logo site.png" alt="" class="w-24"> 
                 <!-- <ul class="flex justify-end items-center">
                     <li class="p-4 text-xl font-semibold">
                         <a href="bulgaria.html">България</a>
@@ -253,7 +253,7 @@
             </div>
 
         <div class="w-full border-gray-200 border-t-2 border-dotted flex flex-row flex-wrap justify-around items-center h-24">
-            <p class="text-2xl"><img src="./icons/" alt=""></p>
+            <p class="text-2xl"><img src="../icons/logo site.png" alt="" class="w-24"></p>
             <div class="flex flex-row flex-wrap justify-around items-center w-52 text-lg">
                 <p><a href="https://openweathermap.org/api">API</a></p>
                 <p><a href="">За Реклама</a></p>
