--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vremeto.bg</title>
+    <title>Slunchevo.com - Времето в България</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-sans bg-gray-100">
@@ -256,7 +256,7 @@
             <p class="text-2xl"><img src="../icons/logo site.png" alt="" class="w-24"></p>
             <div class="flex flex-row flex-wrap justify-around items-center w-52 text-lg">
                 <p><a href="https://openweathermap.org/api">API</a></p>
-                <p><a href="">За Реклама</a></p>
+                <p><a href="contact.html">За Реклама</a></p>
                 <p>	&copy; 2021 slunchevo.com</p>
             </div>
         </div>
