--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slunchevo.com - Времето в България</title>
+    <title>Vremednes.com - Времето в България</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-sans bg-gray-100">
 <!-- navbar -->
         <nav class="bg-blue-500 text-white flex flex-wrap justify-center items-center">
             <div class="flex justify-center items-center">
-                <img src="../icons/logo site.png" alt="" class="w-24"> 
+                <img src="../icons/logo 1.2.white.png" alt="" class="w-24"> 
                 <!-- <ul class="flex justify-end items-center">
                     <li class="p-4 text-xl font-semibold">
                         <a href="bulgaria.html">България</a>
@@ -157,91 +157,91 @@
                 <h1 class="text-center mt-2 uppercase text-2xl">Избрани Градове</h1>
                 <nav class="mt-3 border-t-2 border-dotted border-gray-300">
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100  hover:text-gray-700  text-xl" href="#">
                         <span class="mx-4 font-medium">София</span>
                         <span class="text-gray-300">
                             <span class="sofia-temp-min text-blue-500">22</span> / <span class="sofia-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
     
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100  hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Пловдив</span>
                         <span class="text-gray-300">
                             <span class="plovdiv-temp-min text-blue-500">22</span> / <span class="plovdiv-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
     
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Варна</span>
                         <span class="text-gray-300">
                             <span class="varna-temp-min text-blue-500">22</span> / <span class="varna-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Бургас</span>
                         <span class="text-gray-300">
                             <span class="burgas-temp-min text-blue-500">22</span> / <span class="burgas-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Русе</span>
                         <span class="text-gray-300">
                             <span class="ruse-temp-min text-blue-500">22</span> / <span class="ruse-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Стара Загора</span>
                         <span class="text-gray-300">
                             <span class="staraZagora-temp-min text-blue-500">22</span> / <span class="staraZagora-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Плевен</span>
                         <span class="text-gray-300">
                             <span class="pleven-temp-min text-blue-500">22</span> / <span class="pleven-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Сливен</span>
                         <span class="text-gray-300">
                             <span class="sliven-temp-min text-blue-500">22</span> / <span class="sliven-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Добрич</span>
                         <span class="text-gray-300">
                             <span class="dobrich-temp-min text-blue-500">22</span> / <span class="dobrich-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Шумен</span>
                         <span class="text-gray-300">
                             <span class="shumen-temp-min text-blue-500">22</span> / <span class="shumen-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Хасково</span>
                         <span class="text-gray-300">
                             <span class="haskovo-temp-min text-blue-500">22</span> / <span class="haskovo-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Пазарджик</span>
                         <span class="text-gray-300">
                             <span class="pazargik-temp-min text-blue-500">22</span> / <span class="pazargik-temp-max text-yellow-500">22</span>
                         </span>
                     </a>
 
-                    <a class="flex justify-between items-center mt-5 py-2 px-8 text-gray-600 border-l-4 border-gray-100 hover:bg-gray-200 hover:text-gray-700 hover:border-blue-500 text-xl" href="#">
+                    <a class="flex justify-between items-center mt-5 py-2 px-8 cursor-default text-gray-600 border-l-4 border-gray-100 hover:text-gray-700 text-xl" href="#">
                         <span class="mx-4 font-medium">Велико Търново</span>
                         <span class="text-gray-300">
                             <span class="velikoTurnovo-temp-min text-blue-500">22</span> / <span class="velikoTurnovo-temp-max text-yellow-500">22</span>
@@ -253,11 +253,11 @@
             </div>
 
         <div class="w-full border-gray-200 border-t-2 border-dotted flex flex-row flex-wrap justify-around items-center h-24">
-            <p class="text-2xl"><img src="../icons/logo site.png" alt="" class="w-24"></p>
+            <p class="text-2xl"><img src="../icons/logo site 1.1.png" alt="" class="w-24"></p>
             <div class="flex flex-row flex-wrap justify-around items-center w-52 text-lg">
                 <p><a href="https://openweathermap.org/api">API</a></p>
                 <p><a href="contact.html">За Реклама</a></p>
-                <p>	&copy; 2021 slunchevo.com</p>
+                <p>	&copy; 2021 vremednes.com</p>
             </div>
         </div>
 
