--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vremednes.com - Времето в България</title>
+    <meta name="description" content="Времето в момента. Прогноза за времето през следващите 5 дни"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-sans bg-gray-100">
 <!-- navbar -->
+<article>
         <nav class="bg-blue-500 text-white flex flex-wrap justify-center items-center">
             <div class="flex justify-center items-center">
-                <img src="../icons/logo 1.2.white.png" alt="" class="w-24"> 
+                <img src="../icons/logo 1.2.white.png" alt="weather icon logo" class="w-24"> 
                 <!-- <ul class="flex justify-end items-center">
                     <li class="p-4 text-xl font-semibold">
                         <a href="bulgaria.html">България</a>
@@ -253,14 +255,14 @@
             </div>
 
         <div class="w-full border-gray-200 border-t-2 border-dotted flex flex-row flex-wrap justify-around items-center h-24">
-            <p class="text-2xl"><img src="../icons/logo site 1.1.png" alt="" class="w-24"></p>
+            <p class="text-2xl"><img src="../icons/logo site 1.1.png" alt="weather icon logo" class="w-24"></p>
             <div class="flex flex-row flex-wrap justify-around items-center w-52 text-lg">
                 <p><a href="https://openweathermap.org/api">API</a></p>
                 <p><a href="contact.html">За Реклама</a></p>
                 <p>	&copy; 2021 vremednes.com</p>
             </div>
         </div>
-
+</article>
         <script src="https://kit.fontawesome.com/7923e924af.js" crossorigin="anonymous"></script>
         <script src="forecast.js"></script>
         <script src="fiveDayForecast.js"></script>
