--- a/public/contact.html
+++ b/public/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>За Реклама</title>
+    <title>За Реклама - vremednes.com</title>
 </head>
 <body>
     <div class="flex items-center justify-center h-screen">
