--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatibible" content="chrome">
     <title>Vremednes.com - Времето в България</title>
     <meta name="description" content="Времето в момента. Прогноза за времето през следващите 5 дни"/>
+    <meta name="keywords" content="време, времето, вали ли, море, планина, времето софия, бургас, софия, пловдив, варна, сливен, sinoptik, dalivali, прогноза ">
+    <link rel="shortcut icon" type="image/ico" href="../favicon/favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-sans bg-gray-100">
