--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <article>
         <nav class="bg-blue-500 text-white flex flex-wrap justify-center items-center">
             <div class="flex justify-center items-center">
-                <img src="../icons/logo 1.2.white.png" alt="weather icon logo" class="w-24"> 
+                <img src="./icons/logo 1.2.white.png" alt="weather icon logo" class="w-24"> 
                 <!-- <ul class="flex justify-end items-center">
                     <li class="p-4 text-xl font-semibold">
                         <a href="bulgaria.html">България</a>
@@ -255,10 +255,10 @@
                 </nav>
 
             </div>
-            </div>
+            </div> 
 
         <div class="w-full border-gray-200 border-t-2 border-dotted flex flex-row flex-wrap justify-around items-center h-24">
-            <p class="text-2xl"><img src="../icons/logo site 1.1.png" alt="weather icon logo" class="w-24"></p>
+            <p class="text-2xl"><img src="./icons/logo site 1.1.png" alt="weather icon logo" class="w-24"></p>
             <div class="flex flex-row flex-wrap justify-around items-center w-52 text-lg">
                 <p><a href="https://openweathermap.org/api">API</a></p>
                 <p><a href="contact.html">За Реклама</a></p>
