--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,14 @@
                     </li>
                 </ul> -->
             </div>
-                <div class="flex justify-center items-center cursor-pointer ">
+                <div class="flex flex-col sm:flex-row justify-center items-center">
                     <!-- <button class="btn-city"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-5 m-1">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                       </svg></button> -->
-                    <input type="text" placeholder="Потърси времето в твоя град..." class="rounded-md p-1 md:w-80 text-black w-72 mb-3 md:mb-0 outline-none input btn-city" id="name">
-                    <button class="btn-city animate-bounce"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-5 m-1">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                      </svg></button>
+                    <input type="text" placeholder="Потърси времето в твоя град..." class="rounded-md p-1 md:w-80 text-black w-72 mb-3 md:mb-0 outline-none input" id="name">
+                    <button class="btn-city flex border-gray-100 border-2 rounded-md pr-1 ml-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-5 m-1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+                      </svg>търси</button>
                 </div>
         </nav>
 <!-- Main -->
