--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                         <div class="flex flex-col justify-between items-center p-3 h-72 mb-5 md:mb-0 w-40 rounded-md shadow-md bg-white ">
                             <h1 class="date-one">Понеделник</h1>
                             <span class="text-3xl w-20 forecastIcon-one">Icon</span>
-                            <span class="text-3xl temp-one">26</span>
+                            <span class="text-3xl text-blue-500 temp-one">26</span>
                             <div class="flex flex-row justify-around items-center">
                                 <p class="pr-2">
                                     <i class="fas fa-tint text-blue-500"></i>
@@ -93,7 +93,7 @@
                         <div class="flex flex-col justify-between items-center p-3 h-72 mb-5 md:mb-0 w-40 rounded-md shadow-md bg-white ">
                             <h1 class="date-two">Вторник</h1>
                             <span class="text-3xl w-20 forecastIcon-two">Icon</span>
-                            <span class="text-3xl temp-two">26</span>
+                            <span class="text-3xl text-blue-500 temp-two">26</span>
                             <div class="flex flex-row justify-around items-center">
                                 <p class="pr-2">
                                     <i class="fas fa-tint text-blue-500"></i>
